--- a/content/404.md
+++ b/content/404.md
@@ -3,7 +3,7 @@ Title: Error 404
 Robots: noindex,nofollow
 */
 
-Error 404
-=========
+# Error 404
 
-Woops. Looks like this page doesn't exist.
+
+What you seek cannot be found. Seek it elsewhere. 
